# motto-common

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-rollback.yml  benchmark.yml  cross-consumer-test.yml  rca.yml  release.yml  test.yml
docs/: README.md  operations.md  pypi-trusted-publishing.md
integration_tests/: __init__.py  test_integration.py
scripts/: __init__.py  auto_rca.py  auto_rollback.py  configure_sentry_alerts.py  cross_consumer_test.py  feedback_loop.py  generate_tests_from_sentry.py
src/motto_common/: __init__.py  auth.py  config.py  logging.py  sentry_init.py
tests/: test_auth.py  test_config.py  test_logging.py  test_sentry_init.py
tests/benchmarks/: test_sentry_benchmarks.py
